# nonebot-plugin-access-control-api

./: .pre-commit-config.yaml  README.MD  bot.py  pyproject.toml
.github/workflows/: release.yml
src/nonebot_plugin_ac_demo/: event_demo.py  plugin_service.py
src/nonebot_plugin_access_control_api/: __init__.py  context.py  errors.py
src/nonebot_plugin_access_control_api/models/: rate_limit.py
src/nonebot_plugin_access_control_api/service/: __init__.py  contextvars.py  delegate.py  methods.py  nonebot_service.py  plugin_service.py  service.py  subservice.py  subservice_owner.py
src/nonebot_plugin_access_control_api/service/_dummy/: patcher.py  permission.py  rate_limit.py
src/nonebot_plugin_access_control_api/service/interface/: __init__.py  factory.py  nonebot_service.py  patcher.py  permission.py  plugin_service.py  rate_limit.py  service.py  service_base.py  subservice.py
src/nonebot_plugin_access_control_api/subject/: __init__.py
src/nonebot_plugin_access_control_api/subject/extractor/: __init__.py  chain.py
src/nonebot_plugin_access_control_api/utils/: inspect.py
src/tests/: conftest.py  test_dummy.py  test_eventbus.py  test_subject_extractor.py
src/tests/utils/: event.py
