[project]
name = "nonebot-plugin-access-control-api"
version = "1.2.1"
description = ""
authors = [
    {name = "ssttkkl", email = "huang.wen.long@hotmail.com"},
]
dependencies = [
    "nonebot2<3.0.0,>=2.2.0",
]
requires-python = "<4.0,>=3.8"
readme = "README.MD"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/bot-ssttkkl/nonebot-plugin-access-control"

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.0.275",
    "isort<6.0.0,>=5.10.1",
    "black<24.0.0,>=23.1.0",
    "pre-commit<4.0.0,>=3.1.0",
    "setuptools<69.0.0,>=68.1.2",
    "nb-cli",
    "nonebot-plugin-apscheduler",
    "nonebot2[fastapi]",
    "nonebot-adapter-onebot",
    "nonebot-adapter-kaiheila",
    "nonebot-adapter-qq",
    "nonebot-adapter-telegram",
    "nonebot-adapter-console",
    "nonebot-adapter-feishu",
    "nonebug<1.0.0,>=0.3.5",
    "pytest<8.0.0,>=7.4.3",
    "pytest-asyncio<1.0.0,>=0.21.1",
    "pytest-cov<5.0.0,>=4.1.0",
]
[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "E402", "F403", "T201"]

line-length = 160
target-version = "py38"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.nonebot]
plugins = ["nonebot_plugin_access_control_api"]
plugin_dirs = []

[tool.pdm]
distribution = false

[tool.pdm.build]
includes = ["src/nonebot_plugin_access_control_api"]